# es-cicd

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
scripts/: django_entrypoint.sh
src/: .coveragerc  manage.py  pytest.ini
src/api/: urls.py  views.py
src/api/tests/integration/: test_views.py
src/configuration/: settings.py  test_settings.py  urls.py
src/users/: models.py
src/users/management/commands/: wait_for_db.py
src/users/tests/unit/: test_commands.py  test_models.py
